force-app/main/default/objects/ActivityTimelineParent__mdt/ActivityTimelineParent__mdt.object-meta.xml
<CustomObject>
	<label>Activity Timeline Parent</label>
	<pluralLabel>Activity Timeline Parents</pluralLabel>
</CustomObject>