force-app/main/default/objects/ActivityTimelineParent__mdt/fields/Activity_Timeline_Child__c.field-meta.xml
<CustomField>
	<fullName>Activity_Timeline_Child__c</fullName>
	<description>The child record to be shown in the activity timeline</description>
	<inlineHelpText>The child record to be shown in the activity timeline</inlineHelpText>
	<label>Child Config</label>
	<referenceTo>ActivityTimelineChild__mdt</referenceTo>
	<relationshipLabel>Activity Timelines</relationshipLabel>
	<relationshipName>Activity_Timelines1</relationshipName>
	<required>true</required>
	<type>MetadataRelationship</type>
</CustomField>