force-app/main/default/objects/ActivityTimelineParent__mdt/fields/CreateableObject_NoOverride__c.field-meta.xml
<CustomField>
    <fullName>CreateableObject_NoOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Leave checked unless you know what you&apos;re doing</description>
    <inlineHelpText>Leave checked unless you know what you&apos;re doing</inlineHelpText>
    <label>No Override</label>
    <type>Checkbox</type>
</CustomField>