force-app/main/default/objects/ActivityTimelineParent__mdt/fields/IsMacro__c.field-meta.xml
<CustomField>
    <fullName>IsMacro__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Shows as a separate list of actions. Example of use: &quot;Log a Call&quot;. Non-macro example: &quot;Create Task&quot;.</description>
    <inlineHelpText
    >Shows as a separate list of actions. Example of use: &quot;Log a Call&quot;. Non-macro example: &quot;Create Task&quot;.</inlineHelpText>
    <label>Show as Macro in Dropdown Menu</label>
    <type>Checkbox</type>
</CustomField>