force-app/main/default/objects/ActivityTimelineParent__mdt/fields/SObjectRelationshipField__c.field-meta.xml
<CustomField>
	<fullName>SObjectRelationshipField__c</fullName>
	<description
    >The relationship between parent and child on the SObject that should be queried (e.g., Event.WhatId for relationships between Account and Event, or CustomObject__c.CustomLookup__c for relationships between AnotherCustomObject__c)</description>
	<inlineHelpText
    >The relationship between parent and child on the SObject that should be queried (e.g., Event.WhatId for relationships between Account and Event, or CustomObject__c.CustomLookup__c for relationships between AnotherCustomObject__c)</inlineHelpText>
	<label>Relationship Field</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>